turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:8: error: not found: value leveBrosse
	leveBrosse;
        ^Source:9: error: not found: type Red
	setCouleur(couleur: Red);
                            ^Source:10: error: not found: value baisseBrosse
	baisseBrosse;
        ^Source:16: error: not found: value leveBrosse
	leveBrosse();
        ^Source:17: error: not found: type Yellow
	setCouleur(couleur: Yellow);
                            ^Source:18: error: not found: value baisseBrosse
	baisseBrosse();
        ^Source:24: error: not found: value leveBrosse
	leveBrosse();
        ^Source:25: error: not found: type Pink
	setCouleur(couleur: Pink);
                            ^Source:26: error: not found: value baisseBrosse
	baisseBrosse();
        ^